plugins {
    id 'java'
}

group 'org.nmslib.hnswlib'
version '1.0-SNAPSHOT'

java.toolchain.languageVersion = JavaLanguageVersion.of(20)

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.7'
    implementation 'ch.qos.logback:logback-classic:1.4.7'

    testImplementation platform('org.junit:junit-bom:5.9.2')
    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.junit.vintage:junit-vintage-engine'

    testImplementation platform('org.junit:junit-bom:5.9.2')
    testImplementation platform('org.mockito:mockito-bom:5.2.0')
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs '--enable-preview', '--add-opens=java.base/java.io=ALL-UNNAMED'
    useJUnitPlatform()
}
